# turtle_go_urdf

./: CMakeLists.txt  package.xml
config/: diff_drive_controller.yaml  lidar.yaml
launch/: bringup_launch.py
urdf/: robot.urdf.xacro
